css/style.css
/*animation*/
@keyframes myanimation {
  from {
    transform: translateY(0px);
  }
  to {
    transform: translateY(-30px);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .movingimage, .movingimage:hover {
    animation: none !important;
  }
  img:active{
    transform: none !important;
  }
  img:hover, *:focus{
    transform: none !important;
  }
}

/*Jump to main*/
.skip {
  text-align: right;
  font-size: 15px;
  position: relative;
  right: 500px;
}

.skip:focus{
  margin-top: 50px;
   background-color: #000000;
   position: static;
   color: white;
   width: auto;
   height: auto;
}


body{
	margin-right: auto;
  margin-left: auto;
	font-family: 'Poppins';
  background: url('../images/background2.jpg');
  background-size: 90vw auto;
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 90vw;
  justify-content: center;
}

.topline{
  grid-row: 1;
}

header{
  grid-row: 2;
}

main{
  grid-row: 3;
}

aside{
  grid-row: 4;
}

/*Make the h1 heading bigger with a bold font*/
h1{
	font-size: 2em;
	font-weight: bold;
  color: #8B0000;
  font-family: 'Poppins', sans-serif;
  padding: 10px;
	text-align: center;
}

.active{
	background: #8B0000;
  text-transform: uppercase;
	text-align: left;
  border-radius: 0%;
  justify-content: center;
  text-align: center;
}

.active a{
	text-decoration: none;
	color: white;
}

/*Style the images*/
img{
  height: auto;
	width: 300px;
  border: 3px /*solid blue*/;
  padding: 1px;
  border-radius: 10px;
  margin: 10px;

}

img:hover, *:focus{
  box-shadow:#8B0000;
  transform: scale(1.03);
}

.movingimage {
  padding: auto;
  animation-name: myanimation;
  animation-duration: 2s;
}

  /* bounce on hover code */
.movingimage:hover {
  animation-name: myanimation;
  animation-duration: 3s;
  animation:
    bounce 300ms
    alternate infinite
    cubic-bezier(.2, .65, .6, 1);
}

figcaption {
	padding: 0.5em;
	font-size: 75%;
	text-align: center;
}

/*Make the h2 heading match h1*/
h2{
	font-size: 1.5em;
	font-weight: bold;
}
/*Make the h3 heading*/
h3{
	font-size: 1em;
	font-weight: bold;
}

p, aside{
  display: block;
  width: 85vw;
}

/*Improve the spacing for paragraphs AND headings*/
aside, p, h1, h2 {
    margin: 10px;
}

aside{
  font-style: italic;
  background-color: pink;
}

/*Change the styling for all of the list items in the nav section*/
.navcontainer{
  text-align: center;
}

nav ul{
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  grid-gap: 10px;
  align-content: center;
  justify-content: center;
}
nav li{
  padding: auto;
  width: 250px;
  height: 30px;
  background: rgb(157, 69, 92);
  text-align: center;
  font-size: 20px;
}

a:link{
  color:#FBE3E7;
}

.asidelink{
  color:#8B0000 !important;
}

/*Added this so the links stay the same color*/
a:visited{color:#FBE3E7}

/* Change the footer style*/

#footertext {
  font: 15px italic black;
}

footer {
  /* padding: 10px; */
  text-align: center;
  background-color: rgb(241, 170, 191);
  margin-top: 10px;
  grid-row: 5;
}

.contact{
    font-size: 12px;
    margin-left: 10px;
    padding-left: 10px;
    padding-right: 10px;
    border: black solid;
    background:white;
    border-radius: 10px;
    display: inline-block;
    text-align: stretch;
}

  form{
    font-family: 'Poppins', sans-serif;
  }

  .galleryflex {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}
/*Tablet view*/
@media only screen and (min-width: 768px) {
  aside{
    width: 50%;
    padding-left: 10px;
    margin-left: 10px;
    float: right;
  }

  /*home page theme figure in the center*/
.Pcontainer{
  text-align: center;
}/*Don't know why, but this cannot be used in mobile, or it will cause overflow*/
  /*nav*/
  nav ul{
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    justify-items: center;
  }
  .nav li{
    font-size: 24px;
    width: 50%;
  }
  /*image hover is larger*/
  img:hover, *:focus{
    transform: scale(1.10);
  }
/*form*/
  .form-box{
    width: 60%;
    position: relative;
    left: 50%;
    margin-left:-15%;
  }

  .contact{
    margin-left: 0px;
    padding-left: 20px;
    padding-left: 20px;
    padding-top: 10px;
  }
}

/*Desktop view*/
@media only screen and (min-width: 1024px){
/*home page theme figure in the center*/
  .Pcontainer{
    text-align: center;
  }

  /*put aside as side bar*/
  aside{
    width: 30%;
    padding-left: 15px;
    margin-left: 15px;
    float: right;
  }

  /*nav*/
  nav ul{
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 1fr;
    justify-items: center;
  }
  .nav li{
    font-size: 24px;
    width: 25%;
  }
/*Gallery change*/
img:hover, *:focus{
  transform: scale(1.10);
}

img:active{
  z-index: 3; /*make sure the enlarged version is on top*/
  width: 612px;
  height: 410px;
  position: fixed;
  left: 50%;
  top: 50%;
  margin-left:-306px;
  margin-top:-205px;
}

/*form*/
.form-box{
  width: 60%;
  position: relative;
  left: 50%;
  margin-left:-15%;
}
.contact{
  font-size: 14px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
}

}

